# mistralai_bot

./: alembic.ini  bot.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_02_10_0823-c60183002f35_.py
mistralai_bot/: config.py  database_eng.py  mist_api.py  orm_query.py
mistralai_bot/handlers/: admin.py  user.py
mistralai_bot/keyboards/: keyboards.py
mistralai_bot/middlewares/: db.py
mistralai_bot/state/: states.py
mistralai_bot/utils/: logger.py  statistics_diogram.py
